manifests/overlays/dev/network-policies/databases/carts-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-netpol
  namespace: sock-shop
  labels:
    app: carts-db
    policy: database
    tier: data
spec:
  podSelector:
    matchLabels:
      name: carts-db
  
  policyTypes:
  - Ingress
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: carts
    ports:
    - protocol: TCP
      port: 27017
