manifests/overlays/dev/network-policies/databases/catalogue-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalogue-db-netpol
  namespace: sock-shop
  labels:
    app: catalogue-db
    policy: database
spec:
  podSelector:
    matchLabels:
      name: catalogue-db
  
  policyTypes:
  - Ingress
  
  ingress:
  # allow only catalogue -> db
  - from:
    - podSelector:
        matchLabels:
          name: catalogue
    ports:
    - protocol: TCP
      port: 3306 # mysql port
