manifests/overlays/dev/network-policies/databases/session-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: session-db-netpol
  namespace: sock-shop
  labels:
    app: session-db
    policy: database
    tier: data
spec:
  podSelector:
    matchLabels:
      name: session-db
  
  policyTypes:
  - Ingress
  
  ingress:
  # allow from frontend (if session storage is used)
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 6379  # Redis port
