manifests/overlays/dev/network-policies/databases/user-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-db-netpol
  namespace: sock-shop
  labels:
    app: user-db
    policy: database
    tier: data
spec:
  podSelector:
    matchLabels:
      name: user-db
  
  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: user
    ports:
    - protocol: TCP
      port: 27017
